revisions from document

--- a/contact/index.html
+++ b/contact/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang='en' class="givecrithtml home">
     <head>
-        <title>How to Give a Critique</title>
+        <title>Contact | How to Critique</title>
         <link rel="stylesheet" href="../assets/css/styles.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="og:title" content="Contact | How to Critique">
+        <meta name="og:url" content="https://www.howtocritique.com/contact">
+        <meta name="twitter:title" content="Contact | How to Critique">
+        <meta name="og:description" content="A collection of downloadable resources designed to help people give and receive effective critique in order to improve their work, their process and their workplace.">
+        <meta name="twittter:description" content="A collection of downloadable resources designed to help people give and receive effective critique in order to improve their work, their process and their workplace.">
+        <meta name="description" content="A collection of downloadable resources designed to help people give and receive effective critique in order to improve their work, their process and their workplace.">
     </head>
 
     <body class="bg-grey">
