--- a/give/index.html
+++ b/give/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang='en' class="givecrithtml home">
     <head>
-        <title>How to Give a Critique</title>
+        <title>How to Give a Critique | How to Critique</title>
         <link rel="stylesheet" href="../assets/css/styles.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="og:title" content="How to Give a Critique | How to Critique">
+        <meta name="og:url" content="https://www.howtocritique.com/give">
+        <meta name="twitter:title" content="How to Give a Critique | How to Critique">
+        <meta name="og:description" content="A collection of downloadable resources designed to help people give and receive effective critique in order to improve their work, their process and their workplace.">
+        <meta name="twittter:description" content="A collection of downloadable resources designed to help people give and receive effective critique in order to improve their work, their process and their workplace.">
+        <meta name="description" content="A collection of downloadable resources designed to help people give and receive effective critique in order to improve their work, their process and their workplace.">
     </head>
 
     <body class="bg-grey">
@@ -83,7 +89,7 @@
                         <!-- Card -->
                         <div class="card inner-card red mb-5">
                           <div class="card-body">
-                            <span class="step font-weight-bold">Step 1</span>
+                            <!-- <span class="step font-weight-bold">Step 1</span> -->
                             <h2 class="card-title mx-0 my-0 display-2">Ask first</h2>
                             <p class="card-sub-title mx-0">
                               Ask for permission and direction before giving feedback on someone's work.
@@ -115,7 +121,7 @@
                         <!-- Card -->
                         <div class="card inner-card red mb-5">
                           <div class="card-body">
-                            <span class="step font-weight-bold">Step 2</span>
+                            <!-- <span class="step font-weight-bold">Step 2</span> -->
                             <h2 class="card-title mx-0 my-0 display-2">Make it visible</h2>
                             <p class="card-sub-title mx-0">
                               Write on the work to show any feedback and post it for everyone to see.
@@ -136,7 +142,7 @@
                             </div>
                             <div class="collapse details" id="collapse2">
                               <p class="card-text">
-                                This creates an artifact that will help the person receiving the feedback to remember what was said about their work. It also communicates to everyone involved that the work being shown is not precious - just a part of a process. It takes the pressure off of any single student's work and normalizes critiquing for everyone.
+                                This creates an artifact that will help the person receiving the feedback to remember what was said about their work. It also communicates to everyone involved that the work being shown is not precious - just a part of a process. It takes the pressure off of any single person's work and normalizes critiquing for everyone.
                               </p>
                             </div>
                           </div>
@@ -147,7 +153,7 @@
                         <!-- Card -->
                         <div class="card inner-card red mb-5">
                           <div class="card-body">
-                            <span class="step font-weight-bold">Step 3</span>
+                            <!-- <span class="step font-weight-bold">Step 3</span> -->
                             <h2 class="card-title mx-0 my-0 display-2">Smile</h2>
                             <p class="card-sub-title mx-0">
                               Start the critique with a smile - and maybe even make people laugh.
@@ -178,7 +184,7 @@
                         <!-- Card -->
                         <div class="card inner-card red mb-5">
                           <div class="card-body">
-                            <span class="step font-weight-bold">Step 4</span>
+                            <!-- <span class="step font-weight-bold">Step 4</span> -->
                             <h2 class="card-title mx-0 my-0 display-2">Work together</h2>
                             <p class="card-sub-title mx-0">
                               Make it a joint venture between yourself and the person whose work is being critiqued.
@@ -209,7 +215,7 @@
                         <!-- Card -->
                         <div class="card inner-card red mb-5">
                           <div class="card-body">
-                            <span class="step font-weight-bold">Step 5</span>
+                            <!-- <span class="step font-weight-bold">Step 5</span> -->
                             <h2 class="card-title mx-0 my-0 display-2">Have an opinion</h2>
                             <p class="card-sub-title mx-0">
                               Take the time to develop some strong opinions about the work and share them.
@@ -240,7 +246,7 @@
                         <!-- Card -->
                         <div class="card inner-card red mb-5">
                           <div class="card-body">
-                            <span class="step font-weight-bold">Step 6</span>
+                            <!-- <span class="step font-weight-bold">Step 6</span> -->
                             <h2 class="card-title mx-0 my-0 display-2">Check for audience</h2>
                             <p class="card-sub-title mx-0">
                               Ask who the target audience is for this project and how they will experience the work.
@@ -271,7 +277,7 @@
                         <!-- Card -->
                         <div class="card inner-card red mb-5">
                           <div class="card-body">
-                            <span class="step font-weight-bold">Step 7</span>
+                            <!-- <span class="step font-weight-bold">Step 7</span> -->
                             <h2 class="card-title mx-0 my-0 display-2">Find what's working</h2>
                             <p class="card-sub-title mx-0">
                               Call attention to what is working well and build off that success in other areas of the design.
@@ -303,7 +309,7 @@
                         <!-- Card -->
                         <div class="card inner-card red mb-5">
                           <div class="card-body">
-                            <span class="step font-weight-bold">Step 8</span>
+                            <!-- <span class="step font-weight-bold">Step 8</span> -->
                             <h2 class="card-title mx-0 my-0 display-2">Look for consistency</h2>
                             <p class="card-sub-title mx-0">
                               Identify and assess the use of a visual language in the work.
@@ -336,7 +342,7 @@
                         <!-- Card -->
                         <div class="card inner-card red mb-5">
                           <div class="card-body">
-                            <span class="step font-weight-bold">Step 9</span>
+                            <!-- <span class="step font-weight-bold">Step 9</span> -->
                             <h2 class="card-title mx-0 my-0 display-2">Experience hierarchy</h2>
                             <p class="card-sub-title mx-0">
                               Notice and share your first impressions.
