--- a/guide/index.html
+++ b/guide/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang='en' class="givecrithtml home">
     <head>
-        <title>How to Give a Critique</title>
+        <title>Critique Intro Guide | How to Critique</title>
         <link rel="stylesheet" href="../assets/css/styles.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="og:title" content="Critique Intro Guide | How to Critique">
+        <meta name="og:url" content="https://www.howtocritique.com/guide">
+        <meta name="twitter:title" content="Critique Intro Guide | How to Critique">
+        <meta name="og:description" content="A collection of downloadable resources designed to help people give and receive effective critique in order to improve their work, their process and their workplace.">
+        <meta name="twittter:description" content="A collection of downloadable resources designed to help people give and receive effective critique in order to improve their work, their process and their workplace.">
+        <meta name="description" content="A collection of downloadable resources designed to help people give and receive effective critique in order to improve their work, their process and their workplace.">
     </head>
 
     <body class="bg-grey">
@@ -84,7 +90,7 @@
                         <div class="card inner-card green mb-5">
                           <div class="card-body">
                             <span class="step font-weight-bold">Step 1</span>
-                            <h2 class="card-title mx-0 my-0 display-2">Show students they're already critiquing.</h2>
+                            <h2 class="card-title mx-0 my-0 display-2">Show students they're already critiquing</h2>
                             <p class="card-sub-title mx-0">
                               PROFESSOR + STUDENTS
                             </p>
@@ -135,9 +141,6 @@
 
                               </p>
                               <p class="card-text">
-                                Use sticky notes and markers to leave comments on student's work
-                              </p>
-                              <p class="card-text">
                                 CLASS INTERACTION: Large Group
                                 <ul>
                                 <li>
@@ -155,7 +158,7 @@
                         <div class="card inner-card green mb-5">
                           <div class="card-body">
                             <span class="step font-weight-bold">Step 2</span>
-                            <h2 class="card-title mx-0 my-0 display-2">Talk about things that "don't matter."</h2>
+                            <h2 class="card-title mx-0 my-0 display-2">Talk about things that "don't matter"</h2>
                             <p class="card-sub-title mx-0">
                               PROFESSOR + STUDENTS
                             </p>
