--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <title>How to Critique</title>
         <link rel="stylesheet" href="assets/css/styles.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="og:title" content="How to Critique">
+        <meta name="og:url" content="https://www.howtocritique.com">
+        <meta name="twitter:title" content="How to Critique">
+        <meta name="og:description" content="A collection of downloadable resources designed to help people give and receive effective critique in order to improve their work, their process and their workplace.">
+        <meta name="twittter:description" content="A collection of downloadable resources designed to help people give and receive effective critique in order to improve their work, their process and their workplace.">
+        <meta name="description" content="A collection of downloadable resources designed to help people give and receive effective critique in order to improve their work, their process and their workplace.">
     </head>
 
     <body class="bg-grey">
@@ -72,7 +78,7 @@
                   </div>
                   <div class="card-body col-12 col-md-9">
                     <h2 class="card-title mx-0 ">Critique Vocab</h2>
-                    <p class="card-text text-uppercase">A common language to help macck the process of critique easier + more effective</p>
+                    <p class="card-text text-uppercase">A common language to help make the process of critique easier + more effective</p>
                     <a href="/terms" class="btn mt-5">Click to View or Download</a>
                   </div>
                 </div>
@@ -123,7 +129,7 @@
               <div class="card intro bg-transparent border-0">
                 <div class="card-body">
                   <h3 class="card-title">Make it yours</h3>
-                  <p class="card-text">Bring critque into your own space and teach your group to use it as a part of your process</p>
+                  <p class="card-text">Bring critque into your own space and teach your group to use it as a part of your process.</p>
                 </div>
               </div>
             </div>
