--- a/terms/index.html
+++ b/terms/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang='en' class="givecrithtml home">
     <head>
-        <title>How to Critique</title>
+        <title>Critique Vocab | How to Critique</title>
         <link rel="stylesheet" href="../assets/css/styles.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="og:title" content="Critique Vocab | How to Critique">
+        <meta name="og:url" content="https://www.howtocritique.com/terms">
+        <meta name="twitter:title" content="Critique Vocab | How to Critique">
+        <meta name="og:description" content="A collection of downloadable resources designed to help people give and receive effective critique in order to improve their work, their process and their workplace.">
+        <meta name="twittter:description" content="A collection of downloadable resources designed to help people give and receive effective critique in order to improve their work, their process and their workplace.">
+        <meta name="description" content="A collection of downloadable resources designed to help people give and receive effective critique in order to improve their work, their process and their workplace.">
     </head>
 
     <body class="bg-grey">
@@ -83,7 +89,7 @@
                         <!-- Card -->
                         <div class="card inner-card orange mb-5">
                           <div class="card-body">
-                            <span class="step font-weight-bold">Step 1</span>
+                            <!-- <span class="step font-weight-bold">Step 1</span> -->
                             <h2 class="card-title mx-0 my-0 display-2">Objective vs Subjective</h2>
                             <p class="card-sub-title mx-0">
                               Highlighting the difference between objective and subjective content is important because we critique both types of content differently.
@@ -108,11 +114,11 @@
                               </p>
                               <p class="card-text">
 
-                                Subjective content is less concrete and more open for personal interpretation - there's often no "right" answer. This can be more difficult to critique for people new to the process or without a relationship with others involved in the critique, but critiquing subjective content is often the majority of what needs to be critiqued. Rather than measuring the work against clearly defined objective expectations the person delivering the crit must use existing elements in the work and their own reaction to the work to give helpful feedback to improve the work. 
+                                Subjective content is less concrete and more open for personal interpretation - there's often no "right" answer. This can be more difficult to critique for people new to the process or without a relationship with others involved in the critique, but critiquing subjective content is often the majority of what needs to be critiqued. Rather than measuring the work against clearly defined objective expectations the person delivering the critique must use existing elements in the work and their own reaction to the work to give helpful feedback to improve the work. 
                               </p>
                               <p class="card-text">
                                 
-                                Recognizing that both objective and subjective content exists and needs to be considered can help a person delivering a critique to cover everything that needs to be considered in a crit. It can also inform how the reviewer talks about the work - more directly about objective and possibly more "gentle" about the subjective.
+                                Recognizing that both objective and subjective content exists and needs to be considered can help a person delivering a critique to cover everything that needs to be considered in a crit. It can also inform how the reviewer talks about the work - more direct about objective and possibly more "gentle" about the subjective.
                               </p>
                             </div>
                           </div>
@@ -123,7 +129,7 @@
                         <!-- Card -->
                         <div class="card inner-card orange mb-5">
                           <div class="card-body">
-                            <span class="step font-weight-bold">Step 2</span>
+                            <!-- <span class="step font-weight-bold">Step 2</span> -->
                             <h2 class="card-title mx-0 my-0 display-2">Opinion vs Authority</h2>
                             <p class="card-sub-title mx-0">
                               Opinion is not the same thing as authority. It can be easy as someone delivering a critique to think that your role gives you a position of authority - but that's not the case.
@@ -147,7 +153,7 @@
                                 You bring your opinion to a critique - the person receiving the critique gets to decide if they are going to view you as someone who has some amount of authority behind that opinion. 
                               </p>
                               <p class="card-text">
-                                The person delivering feedback in a critique should consider for themselves whether they are bringing opinion, authority or some combination of both the the critique. This self awareness should inform how they communicate their critique of the work - tone, confidence, giving feedback vs asking questions, use of humor, explanation of their thinking, etc...
+                                The person delivering feedback in a critique should consider for themselves whether they are bringing opinion, authority or some combination of both to the interaction This self awareness should inform how they communicate their critique of the work - tone, confidence, giving feedback vs asking questions, use of humor, explanation of their thinking, etc...
                               </p>
                               <p class="card-text">
                                 Remember that it's easy to form opinions - it's hard to earn authority. That being said, don't miss out on good feedback just because someone doesn't have the authority you think necessary. Often times, the best advice comes from someone new to a specific area or project.
@@ -161,7 +167,7 @@
                         <!-- Card -->
                         <div class="card inner-card orange mb-5">
                           <div class="card-body">
-                            <span class="step font-weight-bold">Step 3</span>
+                            <!-- <span class="step font-weight-bold">Step 3</span> -->
                             <h2 class="card-title mx-0 my-0 display-2">Critical vs Cynical</h2>
                             <p class="card-sub-title mx-0">
                               The negative aspects of the word "cynical" are often unfairly associated with the term "critical".
@@ -182,7 +188,7 @@
                             </div>
                             <div class="collapse details" id="collapse3">
                               <p class="card-text">
-                                These two words are important to define clearly before bringing critique into a group. While someone being critical of you can be a negative experience there are also many times in which critical feedback is not only not negative but a positive and even enjoyable experience. In a healthy studio participants are often excited about and look forward to participating in critiques. 
+                                These two words are important to define clearly before bringing critique into a group. While someone being critical of you can be a negative experience there are also many times in which critical feedback is not only "not negative" but a positive and even enjoyable experience. In a healthy studio participants are often excited about and look forward to participating in critiques. 
                               </p>
                               <p class="card-text">
                                 On the other hand, a cynical attitude toward critiquing (whether that comes from the presenter or reviewer of the work) brings nothing of value to the interaction and, if anything, stalls the creative process.
@@ -195,10 +201,10 @@
                         <!-- Card -->
                         <div class="card inner-card orange mb-5">
                           <div class="card-body">
-                            <span class="step font-weight-bold">Step 4</span>
+                            <!-- <span class="step font-weight-bold">Step 4</span> -->
                             <h2 class="card-title mx-0 my-0 display-2">Critique vs Direction</h2>
                             <p class="card-sub-title mx-0">
-                              There is a big difference between Critique and Direction.
+                              There is a big difference between critique and direction.
                             </p>
                           </div>
                           <div class="card-footer">
@@ -219,7 +225,7 @@
                                 When you critique a piece of work you are sharing either your own experience of the work or sometimes how you imagine others might experience that work. This feedback is useful to a designer as it reveals to them how their work is actually affecting you as a viewer (rather than how they thought it would affect you). If the work isn't doing what they thought or hoped it would this gives them an opportunity to adjust the work in order to produce a reaction more in line with their intentions. Many critiques stop here and let the designer make their own decisions about how to alter the work to improve it. This is often the extent of critique that is expected. 
                               </p>
                               <p class="card-text">
-                                Direction is taking the next step of suggesting or telling the designer what specific actions to take in order to improve their work based on the Critique given. Depending on the expectation of the person receiving the critique this type of input can be seen as very helpful or very intrusive. As a person delivering a critique it's important that you enter into the crit with a clear understanding of what the person receiving the critique is expecting to get out of the interaction.
+                                Direction is taking the next step of suggesting or telling the designer what specific actions to take in order to improve their work based on the critique given. Depending on the expectation of the person receiving the critique this type of input can be seen as very helpful or very intrusive. As a person delivering a critique it's important that you enter into the critique with a clear understanding of what the person receiving the critique is expecting to get out of the interaction, and to operate within that expectation.
                               </p>
                             </div>
                           </div>
