--- a/receive/index.html
+++ b/receive/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang='en' class="recievecrithtml home">
     <head>
-        <title>How to Recieve a Critique</title>
+        <title>How to Recieve a Critique | How to Critique</title>
         <link rel="stylesheet" href="../assets/css/styles.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="og:title" content="How to Recieve a Critique | How to Critique">
+        <meta name="og:url" content="https://www.howtocritique.com/receive">
+        <meta name="twitter:title" content="How to Recieve a Critique | How to Critique">
+        <meta name="og:description" content="A collection of downloadable resources designed to help people give and receive effective critique in order to improve their work, their process and their workplace.">
+        <meta name="twittter:description" content="A collection of downloadable resources designed to help people give and receive effective critique in order to improve their work, their process and their workplace.">
+        <meta name="description" content="A collection of downloadable resources designed to help people give and receive effective critique in order to improve their work, their process and their workplace.">
     </head>
 
     <body class="bg-grey">
@@ -83,7 +89,7 @@
                         <!-- Card -->
                         <div class="card inner-card blue mb-5">
                           <div class="card-body">
-                            <span class="step font-weight-bold">Step 1</span>
+                            <!-- <span class="step font-weight-bold">Step 1</span> -->
                             <h2 class="card-title mx-0 my-0 display-2">Show your work at 100%</h2>
                             <p class="card-sub-title mx-0">
                               Present work that is as close to its final dimension and form as possible.
@@ -115,7 +121,7 @@
                         <!-- Card -->
                         <div class="card inner-card blue mb-5">
                           <div class="card-body">
-                            <span class="step font-weight-bold">Step 2</span>
+                            <!-- <span class="step font-weight-bold">Step 2</span> -->
                             <h2 class="card-title mx-0 my-0 display-2">Respect your work</h2>
                             <p class="card-sub-title mx-0">
                               Display your work in a way that shows you care and that you're taking this seriously.
@@ -147,7 +153,7 @@
                         <!-- Card -->
                         <div class="card inner-card blue mb-5">
                           <div class="card-body">
-                            <span class="step font-weight-bold">Step 3</span>
+                            <!-- <span class="step font-weight-bold">Step 3</span> -->
                             <h2 class="card-title mx-0 my-0 display-2">Don't apologize</h2>
                             <p class="card-sub-title mx-0">
                               Start the critique with a confident description of your work.
@@ -178,7 +184,7 @@
                         <!-- Card -->
                         <div class="card inner-card blue mb-5">
                           <div class="card-body">
-                            <span class="step font-weight-bold">Step 4</span>
+                            <!-- <span class="step font-weight-bold">Step 4</span> -->
                             <h2 class="card-title mx-0 my-0 display-2">Look like you care</h2>
                             <p class="card-sub-title mx-0">
                               Show the person that is critiquing your work that you are interested in what they are saying.
@@ -209,7 +215,7 @@
                         <!-- Card -->
                         <div class="card inner-card blue mb-5">
                           <div class="card-body">
-                            <span class="step font-weight-bold">Step 5</span>
+                            <!-- <span class="step font-weight-bold">Step 5</span> -->
                             <h2 class="card-title mx-0 my-0 display-2">Get excited and invested</h2>
                             <p class="card-sub-title mx-0">
                               Approach your critique with an expectation that it will be an enjoyable and helpful experience.
@@ -240,7 +246,7 @@
                         <!-- Card -->
                         <div class="card inner-card blue mb-5">
                           <div class="card-body">
-                            <span class="step font-weight-bold">Step 6</span>
+                            <!-- <span class="step font-weight-bold">Step 6</span> -->
                             <h2 class="card-title mx-0 my-0 display-2">Prepare yourself</h2>
                             <p class="card-sub-title mx-0">
                               Get ready for your critique by thinking through what you need to learn from it.
@@ -261,7 +267,7 @@
                             </div>
                             <div class="collapse details" id="collapse6">
                               <p class="card-text">
-                                All critiques are different - some include a lot of back and forth - some are just a one-way flow of feedback. Be ready for the possibility that you may not be able to ask specific questions or direct the critique towards certain areas of your work. Even if you don't get the chance to vocalize your thoughts the practice of thinking through your work will inform better future iterations.
+                                All critiques are different - some include a lot of back and forth - some are just a one-way flow of feedback. Don't count on asking specific questions or directing the critique towards certain areas of your work. Even if you don't get the chance to vocalize your thoughts the practice of thinking through your work will inform better future iterations.
                               </p>
                             </div>
                           </div>
@@ -271,7 +277,7 @@
                         <!-- Card -->
                         <div class="card inner-card blue mb-5">
                           <div class="card-body">
-                            <span class="step font-weight-bold">Step 7</span>
+                            <!-- <span class="step font-weight-bold">Step 7</span> -->
                             <h2 class="card-title mx-0 my-0 display-2">Show the right work</h2>
                             <p class="card-sub-title mx-0">
                               Bring work to the critique that matches the expectations of the person giving you feedback.
@@ -303,7 +309,7 @@
                         <!-- Card -->
                         <div class="card inner-card blue mb-5">
                           <div class="card-body">
-                            <span class="step font-weight-bold">Step 8</span>
+                            <!-- <span class="step font-weight-bold">Step 8</span> -->
                             <h2 class="card-title mx-0 my-0 display-2">Take good notes</h2>
                             <p class="card-sub-title mx-0">
                               Write down what is said during the critique or have a friend take notes for you.
@@ -336,7 +342,7 @@
                         <!-- Card -->
                         <div class="card inner-card blue mb-5">
                           <div class="card-body">
-                            <span class="step font-weight-bold">Step 9</span>
+                            <!-- <span class="step font-weight-bold">Step 9</span> -->
                             <h2 class="card-title mx-0 my-0 display-2">Be involved</h2>
                             <p class="card-sub-title mx-0">
                               When possible, take an active role in the critique.
