--- a/give/index.html
+++ b/give/index.html
@@ -74,7 +74,7 @@
                         <p class="card-text my-5">
                           Prepare yourself to be as helpful as possible. The way you interact with someone else's work can affect how they see it themselves. Treat it with respect. Remember that you are working with someone to make their project stronger. It is not you versus them - it is us working together to create the best version of the work possible.
                         </p>
-                        <a href="todo" class="btn mb-5 text-uppercase">
+                        <a href="/pdfs/03 How to Give Critique.pdf" class="btn mb-5 text-uppercase">
                           <i class="fas fa-file"></i> 
                           <div class="printable d-inline-block text-left">
                             Download<br/>
