--- a/guide/index.html
+++ b/guide/index.html
@@ -74,7 +74,7 @@
                         <p class="card-text my-5">
                           This guide is meant to assist in the introduction of critique into a classroom. The steps listed below are based on a process that was developed over the course of many years and informed by the experience of introducing critique into multiple college-level classes. While this guide is tailored to a fairly specific audience the general steps as well as the approach of slowly exposing the group to critique and normalizing the engagement are applicable to a wide variety of audiences and can be effectively employed in many different types of classrooms and workplaces.
                         </p>
-                        <a href="todo" class="btn mb-5 text-uppercase">
+                        <a href="/pdfs/04 Critique Intro Guide.pdf" class="btn mb-5 text-uppercase">
                           <i class="fas fa-file"></i> 
                           <div class="printable d-inline-block text-left">
                             Download<br/>
