--- a/receive/index.html
+++ b/receive/index.html
@@ -74,7 +74,7 @@
                         <p class="card-text my-5">
                           You're about to receive feedback from someone who is dedicating their time and energy to making your work better. Preparing for your critique communicates that you value the investment someone else is making in you and helps to ensure that the interaction is as helpful as possible. The steps below will help you get the most out of your critique.
                         </p>
-                        <a href="todo" class="btn mb-5 text-uppercase">
+                        <a href="/pdfs/02 How to Receive Critique.pdf" class="btn mb-5 text-uppercase">
                           <i class="fas fa-file"></i> 
                           <div class="printable d-inline-block text-left">
                             Download<br/>
