--- a/terms/index.html
+++ b/terms/index.html
@@ -74,7 +74,7 @@
                         <p class="card-text my-5">
                           Giving and receiving feedback works best when those involved use a common language. The terms below present themes and definitions that are important for participants to understand together before engaging in a critique.
                         </p>
-                        <a href="todo" class="btn mb-5 text-uppercase">
+                        <a href="/pdfs/01 Critique Vocab.pdf" class="btn mb-5 text-uppercase">
                           <i class="fas fa-file"></i> 
                           <div class="printable d-inline-block text-left">
                             Download<br/>
