--- a/contact/index.html
+++ b/contact/index.html
@@ -57,7 +57,7 @@
         <div class="container my-5">
           <div class="row">
             <div class="col-12">
-              <div class="card bg-danger red shadow p-5">
+              <div class="card bg-danger red shadow p-3 p-lg-5">
                 <div class="row">
 
                   <div class="card-body col-12">
