--- a/give/index.html
+++ b/give/index.html
@@ -57,7 +57,7 @@
         <div class="container my-5">
           <div class="row">
             <div class="col-12">
-              <div class="card red shadow p-5 bg-danger">
+              <div class="card red shadow p-3 p-lg-5 bg-danger">
                 <div class="row">
 
                   <div class="card-body col-12">
