--- a/receive/index.html
+++ b/receive/index.html
@@ -57,7 +57,7 @@
         <div class="container my-5">
           <div class="row">
             <div class="col-12">
-              <div class="card blue shadow p-5 bg-primary">
+              <div class="card blue shadow p-3 p-lg-5 bg-primary">
                 <div class="row">
 
                   <div class="card-body col-12">
