added google analytics

--- a/guide/index.html
+++ b/guide/index.html
@@ -10,6 +10,15 @@
         <meta name="og:description" content="A collection of downloadable resources designed to help people give and receive effective critique in order to improve their work, their process and their workplace.">
         <meta name="twittter:description" content="A collection of downloadable resources designed to help people give and receive effective critique in order to improve their work, their process and their workplace.">
         <meta name="description" content="A collection of downloadable resources designed to help people give and receive effective critique in order to improve their work, their process and their workplace.">
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-M1X6XF905F"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-M1X6XF905F');
+        </script>        
     </head>
 
     <body class="bg-grey">
